# EPQ

./: .gitignore  README.md  _miner.pyi  cargo.toml  generate_spitzer_locations.py  horizons_results.csv  main.py  pyproject.toml  test.py
media/: Earth Base Table.rst  Earth Base Table.txt  Moon Base Table.rst  Moon Base Table.txt
miner/: __init__.py  asteroid.py  data.csv  miner.py  models.py  notes.txt  position.py  spitzer_location.csv  station.py  utils.py
src/: lib.rs
