[tool.poetry]
name = "epq"
version = "0.1.0"
description = ""
authors = ["James Hilton-Balfe <gobot1234yt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.21"
astropy = "4.3.1"
astroquery = "^0.4.3"

[tool.poetry.dev-dependencies]
black = "20.8b1"
isort = "5.9.3"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.pyright]
venv = ".venv"
pythonVersion = "3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
