[tool.poetry]
name = "epq"
version = "0.1.0"
description = ""
authors = ["James Hilton-Balfe <jhiltonbalfe@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
numpy = "^1.21"
astropy = "4.3.1"
astroquery = "^0.4.3"
sympy = "^1.9"
scipy = "^1.7.2"
poliastro = "^0.16.0"

[tool.poetry.dev-dependencies]
black = "21.11b0"
isort = "5.9.3"
maturin = "0.11.5"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["_miner"]

[tool.pyright]
venv = ".venv"
typeCheckingMode = "basic"
pythonVersion = "3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
